--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Home | theRealDadsdy</title>
     </head>
     <body>
-        <p>Hi?</p>
+        <p>Hi</p>
+        <a href=LevelClicker.html>Level Clicker</a>
     </body>
 </htmL>
