--- a/test/test.html
+++ b/test/test.html
@@ -4,4 +4,4 @@
   <button type="submit" id="submit-button">Submit</button>
 </form>
 <div id="response"></div>
-<script test.js>
+<script test.js></script>
