--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <body>
         <p>Hi</p>
         <a href=LevelClicker.html>Level Clicker</a>
-        <a href=test.html>Test form</a>
+        <a href=Assembler>Assembler Coding</a>
     </body>
 </htmL>
