--- a/test/test.html
+++ b/test/test.html
@@ -1,7 +1,4 @@
-<form>
-  <label for="input-value">Enter your value:</label>
-  <input type="text" id="input-value">
-  <button type="submit" id="submit-button">Submit</button>
-</form>
-<div id="response"></div>
+<p>Clicks show here</p>
+<span id="clicks"></span>
+<button id="click">Click</button>
 <script test.js></script>
